fix(flakes): add outputs section

--- a/templates/flakes/index.md.jinja
+++ b/templates/flakes/index.md.jinja
@@ -8,6 +8,12 @@
 
 https://nix.dev/manual/nix/2.24/command-ref/new-cli/nix3-flake.html#flake-references
 
+## Flake outputs
+
+```nix
+{% include 'flakes/outputs.nix' %}
+```
+
 ## Exposing packages in a basic flake
 
 Packages are system specific
